WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183299
didReceiveServerRedirectForProvisionalNavigation is not called in case of document redirection with service worker registration change
https://bugs.webkit.org/show_bug.cgi?id=183299
Summary
didReceiveServerRedirectForProvisionalNavigation is not called in case of doc...
youenn fablet
Reported
2018-03-02 12:17:30 PST
didReceiveServerRedirectForProvisionalNavigation is not called in case of document redirection with service worker registration change
Attachments
Patch
(15.92 KB, patch)
2018-03-02 12:28 PST
,
youenn fablet
achristensen
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-03-02 12:17:42 PST
<
rdar://problem/37547029
>
youenn fablet
Comment 2
2018-03-02 12:28:10 PST
Created
attachment 334916
[details]
Patch
WebKit Commit Bot
Comment 3
2018-03-06 17:15:41 PST
Comment on
attachment 334916
[details]
Patch Rejecting
attachment 334916
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 334916, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: st, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Auto packing the repository in background for optimum performance. See "git help gc" for manual housekeeping. error: The last gc run reported the following. Please correct the root cause and remove /Volumes/Data/EWS/WebKit/.git/gc.log. Automatic cleanup will not be performed until the file is removed. warning: There are too many unreachable loose objects; run 'git prune' to remove them. Full output:
http://webkit-queues.webkit.org/results/6833744
youenn fablet
Comment 4
2018-03-06 17:17:46 PST
Apparently, it did go through EWS, not sure what is happening there.
youenn fablet
Comment 5
2018-03-06 17:18:36 PST
EWS seems to have landed it as
https://trac.webkit.org/r229349
despite the error message
Aakash Jain
Comment 6
2018-03-06 17:55:58 PST
> Apparently, it did go through EWS, not sure what is happening there.
I am also not sure what was the issue here. Tracking in
https://bugs.webkit.org/show_bug.cgi?id=183392
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug