LayoutTests/http/wpt/service-workers/navigation-redirect-main-frame-worker.js
@@ -1,0 +1,3 @@
+addEventListener("fetch", async (e) => {
+    e.respondWith(Response.redirect("/WebKit/service-workers/navigation-redirect-main-frame.https.html#redirected"));
+});
